add div tags to header and color differently than body

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #c79c10;
 }
 
 code {
@@ -17,4 +18,8 @@ img {
   width: 15%;
   height: auto;
   display: block;
+}
+
+#header {
+  background-color: antiquewhite;
 }
